--- a/profile.html
+++ b/profile.html
@@ -4,26 +4,32 @@
 <link rel = "icon" href="siva.jpg">
 <title>rambo</title>
 		
-<b><center><h3 style="background-color:blue;color:red;	"	>yuvaraj<h3></center>
+<b><center><h3 style="background-color:rgba(44, 93, 139, 0.315);color:rgb(207, 175, 175);">yuvaraj<h3></center>
 </b>
 </head>
-<body><b>aravind is a bad boy</b><br>
+<body><b><h1>WELCOME TO MY BIO</h1></b><br>
 <i>he is from madurai</i> <br>
 <u>he is a playboy in his gang</u><br>
 his lover name is ????????????<br>
 </body>
 <body>
-
+<p><center><h2>
+Hello everyone this is your yuvaraj as uva as a summary as my profile which I like to have  food which is special from the orgin of the birth this is the new kind collect .<br>
+yeah from this word which I learn from my school that we can talk about later in the upcoming details of my bio
+</h2>
+</center>
+</p>
 <ol>
-<li>uva</li>
-<li>vavval</li>
-<li>nipple raja</li>
+<h3>
+    <li>travelling</li>
+        <ul>
+            <li>goa</li>
+            <li>delhi</li>
+        </ul>
+    <li>food</li>
+    <li>enjoyment</li>
+</h3>
 </ol>
-he using samsung s22 ultra<br>
-<a href="l_o_v_e_a_b_l_e_y_u_v_a">instragram</a><br>
-<img src="siva.jpg" width="601"/><br>
-<p align ="center">
-he is going to change his phone to iphone 14 pro max<br>
-</body></p>
+</body>
 <!this is  created by uva -->
 </html>
