--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -110,7 +110,7 @@
     
   
 <marquee  style="color: white;font-size: 30px;margin-left:710px ;margin-top: 20px;" width="250px" height="50px"behavior="slide">Hai Everyone ! </marquee><br>
-<img src="../images/_MG_0072.jpg" style="margin-left:250px;margin-top: -35px;border-radius: 50%;"width="400px" height="400px">
+<img src="./images/_MG_0072.jpg" style="margin-left:250px;margin-top: -35px;border-radius: 50%;"width="400px" height="400px">
 <div style="border-radius: 50%;height: 400px;width: 400px;border: 10px solid #484848;margin-left:240px;margin-top: -410.5px;"></div>
            <br><br><br>
 <a href="#" class="fa fa-facebook"></a>
