--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>home-page</home-page></title>
+<title>home-page</title>
 <link rel = "icon" href="boat.avif">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
