--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <title>home-page</title>
-<link rel = "icon" href="2.jpg">
+<link rel = "icon" href="./images/mypic1.jpg">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
