--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -112,10 +112,9 @@
 <marquee  style="color: white;font-size: 30px;margin-left:710px ;margin-top: 20px;" width="250px" height="50px"behavior="slide">Hai Everyone ! </marquee><br>
 <img src="./images/2.jpg" style="margin-left:250px;margin-top: -35px;border-radius: 50%;"width="400px" height="400px">
 <div style="border-radius: 50%;height: 400px;width: 400px;border: 10px solid #484848;margin-left:240px;margin-top: -410.5px;"></div>
-           <br><br><br>
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-youtube"></a>
-<a href="#" class="fa fa-linkedin"></a>
+           <br><br><br><a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+<a href="https://www.youtube.com/c/VillageCookingChannel" class="fa fa-youtube"></a>
+<a href="https://www.linkedin.com/in/yuvaraj-kumar-2a2246241/" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-twitter"></a> 
 </div>
 <div>
